--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,7 @@
 		<input type="file" id="fileUpload" />
 	</div>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"
-	integrity="sha256-ME1oxb2vK5SiiMtx+4oULIxCn2t84vyIKg3bp8Sw2gI=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.6/xlsx.full.min.js" integrity="sha384-ICFIncc52ImTVuuv9AcDNFlPIYxvixfuWJRC+WupzaCuRX3vtBQ8BSOv6UbuJnmo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"
 	integrity="sha256-wCBClaCr6pJ7sGU5kfb3gQMOOcIZNzaWpWcj/lD9Vfk=" crossorigin="anonymous"></script>
 <script src="./src/index.js" inline="true"></script>
@@ -28,5 +27,4 @@
 			bootstrap();
 		});
 	</script>
-
 </html>
