--- a/src/index.html
+++ b/src/index.html
@@ -1,53 +1,53 @@
 <html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<title>DogLeader XLSX Converter</title>
+		<style>
+			.upload {
+				width: 600px;
+				height: 300px;
+				border: 1px solid #ccc;
+				background-color: rgb(237, 237, 237);
+			}
 
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>DogLeader XLSX Converter</title>
-	<style>
-		.upload {
-			width: 600px;
-			height: 300px;
-			border: 1px solid #ccc;
-			background-color: rgb(237, 237, 237);
-		}
+			#main {
+				width: 600px;
+				margin: 40px auto;
+			}
 
-		#main {
-			width: 600px;
-			margin: 40px auto;
+			#footer {
+				text-align: center;
+				color: rgb(171, 171, 171);
+				font-size: 10px;
+			}
+		</style>
+	</head>
 
-		}
-
-		#footer {
-			text-align: center;
-			color: rgb(171, 171, 171);
-			font-size: 10px;
-		}
-
-	</style>
-</head>
-
-<body>
-	<div id="main">
-		<label for="fileUpload">
-			<div class="upload">
-				<input type="file" id="fileUpload" />
-			</div>
-		</label>
-	</div>
-	<div id="footer">
-		最後更新： <%= htmlWebpackPlugin.options.version %>
-	</div>
-</body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.6/xlsx.full.min.js"
-	integrity="sha384-ICFIncc52ImTVuuv9AcDNFlPIYxvixfuWJRC+WupzaCuRX3vtBQ8BSOv6UbuJnmo" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"
-	integrity="sha256-wCBClaCr6pJ7sGU5kfb3gQMOOcIZNzaWpWcj/lD9Vfk=" crossorigin="anonymous"></script>
-<script src="./src/index.js" inline="true"></script>
-<script type="module">
-	window.addEventListener("DOMContentLoaded", event => {
+	<body>
+		<div id="main">
+			<label for="fileUpload">
+				<div class="upload">
+					<input type="file" id="fileUpload" />
+				</div>
+			</label>
+		</div>
+		<div id="footer">最後更新： <%= htmlWebpackPlugin.options.version %></div>
+	</body>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.2/xlsx.full.min.js"
+		integrity="sha512-DaMQrMxgirR5T0Zu+d7EABoP1uD7e2Sv6OBjifMM8RADf1orW42COfJgwZ8xsLRV6NhgR/erzCfodeqJmA3NtA=="
+		crossorigin="anonymous"
+		referrerpolicy="no-referrer"
+	></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"
+		integrity="sha256-wCBClaCr6pJ7sGU5kfb3gQMOOcIZNzaWpWcj/lD9Vfk="
+		crossorigin="anonymous"
+	></script>
+	<script src="./src/index.js" inline="true"></script>
+	<script type="module">
+		window.addEventListener("DOMContentLoaded", (event) => {
 			bootstrap();
 		});
 	</script>
-
 </html>
