--- a/index.html
+++ b/index.html
@@ -1,53 +1,53 @@
 <html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<title>DogLeader XLSX Converter</title>
+		<style>
+			.upload {
+				width: 600px;
+				height: 300px;
+				border: 1px solid #ccc;
+				background-color: rgb(237, 237, 237);
+			}
 
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>DogLeader XLSX Converter</title>
-	<style>
-		.upload {
-			width: 600px;
-			height: 300px;
-			border: 1px solid #ccc;
-			background-color: rgb(237, 237, 237);
-		}
+			#main {
+				width: 600px;
+				margin: 40px auto;
+			}
 
-		#main {
-			width: 600px;
-			margin: 40px auto;
+			#footer {
+				text-align: center;
+				color: rgb(171, 171, 171);
+				font-size: 10px;
+			}
+		</style>
+	</head>
 
-		}
-
-		#footer {
-			text-align: center;
-			color: rgb(171, 171, 171);
-			font-size: 10px;
-		}
-
-	</style>
-</head>
-
-<body>
-	<div id="main">
-		<label for="fileUpload">
-			<div class="upload">
-				<input type="file" id="fileUpload" />
-			</div>
-		</label>
-	</div>
-	<div id="footer">
-		最後更新： 2020/4/19 下午9:06:33
-	</div>
-</body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.6/xlsx.full.min.js"
-	integrity="sha384-ICFIncc52ImTVuuv9AcDNFlPIYxvixfuWJRC+WupzaCuRX3vtBQ8BSOv6UbuJnmo" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"
-	integrity="sha256-wCBClaCr6pJ7sGU5kfb3gQMOOcIZNzaWpWcj/lD9Vfk=" crossorigin="anonymous"></script>
-<script>const MatchColNames=["訂單編號 (單)","訂單狀態 (單)","收件者姓名 (單)","商品名稱 (品)","商品選項名稱 (品)","數量","寄送方式 (單)","商品選項貨號"],additionalCol=[{i:"I",name:"營業額",f:""},{i:"J",name:"成本",f:""},{i:"K",name:"利潤",f:"I$-J$"},{i:"L",name:"稅",f:"(I$-J$) * 0.05 + I$ * 0.06 * 0.2"},{i:"M",name:"稅後利潤",f:"K$ - L$"},{i:"N",name:"百分比",f:"M$ / I$"}];function debug(){console.log.apply(console,arguments)}function onFileChanged(e){var o=e.target.files[0],t=new FileReader;t.onload=function(e){loadXLSXBuffer(new Uint8Array(e.target.result))},t.readAsArrayBuffer(o)}function loadXLSXBuffer(e){var o=XLSX.read(e,{type:"array"});console.log(o);var t=parseData(o),a=XLSX.utils.book_new(),n=XLSX.utils.aoa_to_sheet(t);debug("newWs: ",n),debug(a);a.SheetNames.push("result"),a.Sheets.result=n,postProcessing(n,t,additionalCol),debug("wb",a),writeXLSX_workbook(a)}function writeXLSX_workbook(e){var o=dateFormat(new Date);XLSX.writeFile(e,o+".xlsx")}function parseData(e){var o=e.Workbook.Sheets[0].name,t=e.Sheets[o],a=e.Sheets[o]["!ref"].match(/[A-Z]{1,2}\d*:([A-Z]{1,2})(\d*)/),n=(e.Strings,a[2]),l=colName2Num(a[1]);console.log("Max colNum",l);for(var r=[],u={},i=1;i<=l;i++){if(t[cellIdx(i,1)])u[t[cellIdx(i,1)].v]=i}console.log("Column Name Map",u);for(i=0;i<MatchColNames.length;i++){var s=u[MatchColNames[i]];s&&r.push(s)}debug(r);var c=[MatchColNames],d=!1;for(i=1;i<=n;i++){let e=[];d=!1;for(var f=0;f<r.length;f++){let o=cellIdx(r[f],i);if(console.log("Get column value: ",o,t[o]),t[o]){if(1===f&&"待出貨"!==t[o].v){d=!0;break}e.push(t[o].v)}else e.push("")}d||c.push(e)}for(f=0;f<additionalCol.length;f++)Array.prototype.push.call(MatchColNames,additionalCol[f].name);var h=c[0].length;for(i=1;i<c.length;i++)if(c[i].length<h)for(var m=h-c[i].length,g=0;g<m;g++)c[i].push("");return debug("result",c),c}function postProcessing(e,o,t){for(var a=1;a<o.length;a++)for(var n=a+1,l=0;l<t.length;l++){var r=t[l].i;e[`${r}${n}`].f=t[l].f.replace(/\$/g,n),e[`${r}${n}`].t="n"}}function dateFormat(e){var o=e||new Date,t=o.getFullYear(),a=o.getMonth()+1,n=o.getDate();return`${t}-${a<10?"0":""}${a}-${n<10?"0":""}${n}`}const ColIdx="ABCDEFGHIJKLMNOPQRSTUVWXYZ";function cellIdx(e,o){return colNum2Name(e)+o}function colName(e){return ColIdx.charAt(colNum-1)}function colName2Num(e){return 2===e.length?26*(ColIdx.indexOf(e[0])+1)+(ColIdx.indexOf(e[1])+1):ColIdx.indexOf(e[0])+1}function colNum2Name(e){return e<=26?ColIdx.charAt(e-1):ColIdx.charAt(Number.parseInt(e/26)-1)+ColIdx.charAt(Number.parseInt(e%26)-1)}function bootstrap(){document.getElementById("fileUpload").addEventListener("change",onFileChanged,!1)}</script>
-<script type="module">
-	window.addEventListener("DOMContentLoaded", event => {
+	<body>
+		<div id="main">
+			<label for="fileUpload">
+				<div class="upload">
+					<input type="file" id="fileUpload" />
+				</div>
+			</label>
+		</div>
+		<div id="footer">最後更新： 2021/10/5 下午11:03:27</div>
+	</body>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.2/xlsx.full.min.js"
+		integrity="sha512-DaMQrMxgirR5T0Zu+d7EABoP1uD7e2Sv6OBjifMM8RADf1orW42COfJgwZ8xsLRV6NhgR/erzCfodeqJmA3NtA=="
+		crossorigin="anonymous"
+		referrerpolicy="no-referrer"
+	></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"
+		integrity="sha256-wCBClaCr6pJ7sGU5kfb3gQMOOcIZNzaWpWcj/lD9Vfk="
+		crossorigin="anonymous"
+	></script>
+	<script>const MatchColNames=["訂單編號","訂單狀態 (單)","收件者姓名 (單)","商品名稱 (品)","商品選項名稱 (品)","數量","寄送方式 (單)","商品選項貨號"],additionalCol=[{i:"I",name:"營業額",f:""},{i:"J",name:"成本",f:""},{i:"K",name:"利潤",f:"I$-J$"},{i:"L",name:"稅",f:"(I$-J$) * 0.05 + I$ * 0.06 * 0.2"},{i:"M",name:"稅後利潤",f:"K$ - L$"},{i:"N",name:"百分比",f:"M$ / I$"}];function debug(){console.log.apply(console,arguments)}function onFileChanged(e){var t=e.target.files[0],a=new FileReader;a.onload=function(e){loadXLSXBuffer(new Uint8Array(e.target.result))},a.readAsArrayBuffer(t)}function loadXLSXBuffer(e){var t=XLSX.read(e,{type:"array"});console.log(t);var a=parseData(t),o=XLSX.utils.book_new(),n=XLSX.utils.aoa_to_sheet(a);debug("newWs: ",n),debug(o);o.SheetNames.push("result"),o.Sheets.result=n,postProcessing(n,a,additionalCol),debug("wb",o),writeXLSX_workbook(o)}function writeXLSX_workbook(e){var t=dateFormat(new Date);XLSX.writeFile(e,t+".xlsx")}function parseData(e){for(var t=e.Workbook.Sheets[0].name,a=e.Sheets[t],o=e.Sheets[t]["!ref"].match(/[A-Z]{1,2}\d*:([A-Z]{1,2})(\d*)/),n=(e.Strings,o[2]),r=colName2Num(o[1]),l=[],i={},s=1;s<=r;s++){if(a[cellIdx(s,1)])i[a[cellIdx(s,1)].v]=s}for(s=0;s<MatchColNames.length;s++){var u=i[MatchColNames[s]];u&&l.push(u)}debug("selectCols:",l);var f=[MatchColNames],c=!1;for(s=2;s<=n;s++){let e=[];c=!1;for(var d=0;d<l.length;d++){let t=cellIdx(l[d],s);if(a[t]){if(1===d&&"待出貨"!==a[t].v){c=!0;break}e.push(a[t].v)}else e.push("")}c||f.push(e)}for(d=0;d<additionalCol.length;d++)Array.prototype.push.call(MatchColNames,additionalCol[d].name);var h=f[0].length;for(s=1;s<f.length;s++)if(f[s].length<h)for(var m=h-f[s].length,g=0;g<m;g++)f[s].push("");return f}function postProcessing(e,t,a){for(var o=1;o<t.length;o++)for(var n=o+1,r=0;r<a.length;r++){var l=a[r].i;e[`${l}${n}`].f=a[r].f.replace(/\$/g,n),e[`${l}${n}`].t="n"}}function dateFormat(e){var t=e||new Date,a=t.getFullYear(),o=t.getMonth()+1,n=t.getDate();return`${a}-${o<10?"0":""}${o}-${n<10?"0":""}${n}`}const ColIdx="ABCDEFGHIJKLMNOPQRSTUVWXYZ";function cellIdx(e,t){return colNum2Name(e)+t}function colName(e){return ColIdx.charAt(colNum-1)}function colName2Num(e){return 2===e.length?26*(ColIdx.indexOf(e[0])+1)+(ColIdx.indexOf(e[1])+1):ColIdx.indexOf(e[0])+1}function colNum2Name(e){return e<=26?ColIdx.charAt(e-1):ColIdx.charAt(Number.parseInt(e/26)-1)+ColIdx.charAt(Number.parseInt(e%26)-1)}function bootstrap(){document.getElementById("fileUpload").addEventListener("change",onFileChanged,!1)}</script>
+	<script type="module">
+		window.addEventListener("DOMContentLoaded", (event) => {
 			bootstrap();
 		});
 	</script>
-
 </html>
